# graph

./: .env.swp  .env.template  .gitignore  LICENSE  PUBLICATION_CLEARANCE_REPORT.md  PUBLICATION_STATUS.md  PUBLICATION_TODO.md  README.md  SETUP.md  THIRD_PARTY_NOTICES.md  com.graph.sync.plist  graph.db-shm  graph.db-wal  pyproject.toml
.clearance/: policy-snapshots.json
src/graph/: config.py
src/graph/adapters/: base.py  bookmarks.py  csv_adapter.py  email.py  feed.py  forty_two.py  html.py  ical.py  ipynb.py  jsonl_adapter.py  kindle.py  markdown.py  max_adapter.py  me.py  opml.py  pdf.py  presence.py  registry.py  sota.py  text.py
src/graph/cli/: main.py
src/graph/export/: __init__.py  html_report.py
src/graph/graph/: service.py
src/graph/mcp/: server.py
src/graph/rag/: embeddings.py  search.py
src/graph/store/: db.py  migrations.py
src/graph/types/: enums.py  models.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_graph_service.py  test_mcp_server.py  test_rag.py  test_store.py
